# nixos-config

./: .gitignore  configuration.nix  direnv.nix  flake.nix  hardware-configuration.nix
hm/: alacritty.nix  dunst.nix  emacs.nix  flameshot.nix  home.nix  picom.nix  powercord.nix  programming.nix  xmonad.hs  xmonad.nix  zsh.nix
hm/emacs/: config.el  doom-emacs-config-module.nix  emacs.nix  init.nix  lang.nix
hm/emacs/doom.d/: init.el
hm/plover/: plover.nix
hm/xmonad/: Catppuccin.hs  XMonad.hs  polybar.nix  theme.nix  xmonad.cabal  xmonad.nix
hm/xmonad-config/: xmonad.cabal  xmonad.hs  xmonad.nix
