name:                xmonad-config
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
author:              IQubic
maintainer:          avi.caspe@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable xmonad-config
  main-is:             xmonad.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <5
                     , xmonad
                     , xmonad-contrib
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
